fixed spacing and remove white space.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,11 +25,62 @@ body {
   background-color: #d1e1ff;
 }
 .header1{
-  font-size:70px;
+  font-size: 70px;
   color: #010c30;
   text-align: center;
   border: 8px solid #c5ddff;
   margin: 600px;
-  padding:10px;
+  padding: 10px;
   background-color: #fbcd86;
+}
+.jumbotron{
+  background-color: #fbcd86;
+}
+.big{
+  font-size: 25px;
+}
+.about{
+  font-size: 70px;
+  text-align: center;
+}
+.me{
+  width: 600px;
+  height: 600px;
+  display: block;
+  margin: 0 auto;
+  border: 8px solid #40415e;
+  padding: 10px;
+}
+.border2{
+  font-size: 25px;
+  color: #010c30;
+  text-align: center;
+  border: 8px solid #40415e;
+  margin: 5px;
+  margin-left: 500px;
+  margin-right: 500px;
+  padding: 10px;
+  background-color: #ffe9c0;
+}
+.column1of2,.column2of2{
+  font-size: 30px;
+  width: 500px;
+  float: right;
+  margin-right: 450px;
+  margin-left: 500px:
+  margin: 10px;
+  color: white;
+}
+.column1of2 h2, .column2of2 h2{
+  font-size: 40px;
+  text-decoration: underline;
+}
+.email{
+  font-family: palatino;
+  font-size: 30px;
+  border: 4px solid #40415e;
+  margin: 1200px;
+  margin-right: 0px;
+  padding: 10px;
+  background-color: #ffe9c0;
 }
